--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,33 @@
 :root {
     --blue: rgb(46, 23, 178);
-    --background-blue: rgb(0, 213, 255);
+    --background-blue: rgba(4, 213, 255, 0.779);
 }
 
 * {
-    margin: 0;
-    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    position: relative;
+    text-align: center;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: var(--background-blue);
+    color: var(--blue);
+}
+
+header div {
+    position: relative;
+    display: inline;
+    font-weight: bold;
+    border-top: 5px solid var(--blue);
+    padding: 3px;
+}
+
+a {
+    padding: 3px;
 }
