--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 :root {
-    --blue: rgb(9, 0, 132);
+    --blue: rgb(49, 139, 249);
     --background: rgba(36, 37, 37, 0.779);
 }
 
 * {
     font-family: Arial, Helvetica, sans-serif;
+    color: var(--blue);
 }
 
 body {
@@ -19,7 +20,6 @@ header {
     width: 100%;
     height: 115px;
     background-color: var(--background);
-    color: var(--blue);
 }
 
 header div {
@@ -37,11 +37,16 @@ a {
 img {
     height: 300px;
     width: 200px;
+    border-radius: 25px;
+}
+label {
+    margin: 2px;
 }
 
 .image-box {
     position: relative;
-    top: 155px;
+    z-index: -1;
+    top: 145px;
     height: 400px;
     width: 300px;
     margin: 0 auto;
@@ -49,9 +54,34 @@ img {
 
 footer {
     position: relative;
+    margin: 0 auto;
+    padding: 10px;
+    top: 200px;
+    background-color: var(--background);
+    border-top: 5px solid var(--blue);
+
 }
+
+.about {
+    position: relative;
+    top: 145px;
+    height: 150px;
+    width: 800px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: var(--background);
+    border: 5px solid var(--blue);
+    border-radius: 25px;
+}    
 
 .contact {
     position: relative;
-    height: 200px;
+    margin: 30px auto;
+    padding: 20px;
+    top: 175px;
+    height: 225px;
+    width: 300px;
+    background-color: var(--background);
+    border: 5px solid var(--blue);
+    border-radius: 25px;
 }
