updated link to contact section in html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ footer {
     border-radius: 25px;
 }    
 
-.contact {
+#contact {
     position: relative;
     margin: 30px auto;
     padding: 20px;
