--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,14 @@
     --blue: rgb(49, 139, 249);
     --background: rgba(36, 37, 37, 0.779);
 }
+
 /* Universal Attributes */
 * {
     font-family: Arial, Helvetica, sans-serif;
     color: var(--blue);
 }
 
+/* Element Attributes */
 body {
     position: relative;
     text-align: center;
@@ -54,6 +56,7 @@ footer {
 
 }
 
+/* Class Attributes */
 .image-box {
     position: relative;
     z-index: -1;
@@ -75,6 +78,7 @@ footer {
     border-radius: 25px;
 }    
 
+/* ID Attributes */
 #contact {
     position: relative;
     margin: 30px auto;
